--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/progmodel/autocomplete/ActionAutoCompletePage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/progmodel/autocomplete/ActionAutoCompletePage-description.adoc
@@ -4,17 +4,17 @@ Before an action can be invoked, the end-user has to provide an argument for eac
 If the parameter is a value (String, number, date etc.) then they can just enter the value in a field.
 But if the parameter is a reference type, then some other mechanism is required.
 
-A "choices" supporting method provides a set of candidate arguments for the parameter type, rendered in the UI as a drop-down list.
-The list of candidates is expected to be small; if there is a larger list then instead use an "autoComplete" supporting method instead.
+An "autoComplete" supporting method provides a set of candidate arguments for the parameter type, rendered in the UI as a drop-down list.
+A search criteria is used to filter from an initial larger list (typically used in repository query); if there is only a smaller initial list then use the simpler "choices" supporting method instead.
 
 The method should also (if possible) only proffer candidates that would also pass any validation rules, to avoid an otherwise frustrating user experience.
 
 There are several variations:
 
 * the parameter for which candidates are being supplied can be either a scalar or a collection
-* the supporting "choices" method can be associated with the parameter by number, or by name
+* the supporting "autoComplete" method can be associated with the parameter by number, or by name
 * the list of candidates for a parameter can depend upon the value already selected for an earlier parameter.
-** The preceding N-1 parameters are supplied to the Nth "choices" supporting method.
+** The preceding N-1 parameters are supplied to the Nth "autoComplete" supporting method.
 ** Or a single record-like structure can be defined and this can be passed through to all supporting methods instead.
 
 As noted above, a supporting method to return a list of candidate arguments is _always_ required for reference types.
@@ -31,59 +31,64 @@ These demonstrate the variations listed in the introduction above.
 In terms of code:
 
 * this action allows a single TV character to be selected.
-It matches the supporting "choices" method with the parameter by number.
+It matches the supporting "autoComplete" method with the parameter by number.
 +
 [source,java]
-.ActionChoicesPage_selectTvCharacter.java
+.ActionAutoCompletePage_selectTvCharacter.java
 ----
-include::ActionChoicesPage_selectTvCharacter.java[tags=class]
+include::ActionAutoCompletePage_selectTvCharacter.java[tags=class]
 ----
 <.> defines the 0th-param
 <.> provides the candidate arguments for the 0-th parameter.
 The collection's element type must match that of the parameter.
+<.> prompts for a search string, which is then used to limit the candidate arguments from an original larger list
 
 * this action is similar, but allows multiple TV characters to be selected.
 This time, it matches the supporting "choices" method with the parameter by name.
 +
 [source,java]
-.ActionChoicesPage_selectTvCharacters.java
+.ActionAutoCompletePage_selectTvCharacters.java
 ----
-include::ActionChoicesPage_selectTvCharacters.java[tags=class]
+include::ActionAutoCompletePage_selectTvCharacters.java[tags=class]
 ----
 <.> provides the candidate arguments for the "tvCharacters" parameter
+<.> prompts for a search string, which is then used to limit the candidate arguments from an original larger list
 
 * the next example demonstrates dependent arguments, so that the TV characters are first filtered by the show that they appeared in.
 +
 [source,java]
-.ActionChoicesPage_selectTvCharacterByShow.java
+.ActionAutoCompletePage_selectTvCharacterByShow.java
 ----
-include::ActionChoicesPage_selectTvCharacterByShow.java[tags=class]
+include::ActionAutoCompletePage_selectTvCharacterByShow.java[tags=class]
 ----
 <.> this parameter is used to filter the TV characters
-<.> the "choices" method is matched by number ...
+<.> the "autoComplete" method is matched by number ...
 <.> \... and has a subset of the parameters of the action itself ("N-1" of them).
+<.> prompts for a search string, which is then used to limit the candidate arguments from an original larger list
 
-* the next example is similar; dependent arguments but with a multiple selection, and using names to match the "choices" method:
+* the next example is similar; dependent arguments but with a multiple selection, and using names to match the "autoComplete" method:
 +
 [source,java]
-.ActionChoicesPage_selectTvCharactersByShows.java
+.ActionAutoCompletePage_selectTvCharactersByShows.java
 ----
-include::ActionChoicesPage_selectTvCharactersByShows.java[tags=class]
+include::ActionAutoCompletePage_selectTvCharactersByShows.java[tags=class]
 ----
-<.> the "choices" method matches a parameter of the action by name ...
-<.> \... and accepts all the parameters defined in the action _up to_ (but not including) the matched parameter.
+<.> the "autoComplete" method matches a parameter of the action by name ...
+<.> \... and accepts all the parameters defined in the action _up to_ (but not including) the matched parameter
+<.> prompts for a search string, which is then used to limit the candidate arguments from an original larger list
 
 * the final example also demonstrates dependent arguments, but using a "Parameters" record.
 +
 [source,java]
-.ActionChoicesPage_selectTvCharactersByShow.java
+.ActionAutoCompletePage_selectTvCharactersByShow.java
 ----
-include::ActionChoicesPage_selectTvCharactersByShow.java[tags=class]
+include::ActionAutoCompletePage_selectTvCharactersByShow.java[tags=class]
 ----
 <.> the set of parameters of the action ...
 <.> \... are also defined as fields of a `Parameters` type
 <.>
 <.> the framework will set the fields of `Parameters` object as appropriate
+<.> prompts for a search string, which is then used to limit the candidate arguments from an original larger list
 
 +
 In a small action like this, there is little to be gained by introducing a "Parameters" record class.
