--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/progmodel/choices/ActionChoicesPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/progmodel/choices/ActionChoicesPage-description.adoc
@@ -38,8 +38,8 @@ It matches the supporting "choices" method with the parameter by number.
 ----
 include::ActionChoicesPage_selectTvCharacter.java[tags=class]
 ----
-<.> defines the 0th-param
-<.> provides the candidate arguments for the 0-th parameter.
+<.> defines the 0^th^-param
+<.> provides the candidate arguments for the 0^th^ parameter.
 The collection's element type must match that of the parameter.
 
 * this action is similar, but allows multiple TV characters to be selected.
