--- a/examples/demo/domain/src/main/java/demoapp/dom/homepage/DemoHomePage-welcome.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/homepage/DemoHomePage-welcome.adoc
@@ -1,10 +1,10 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-This is an link:https://causeway.apache.org[Apache Causeway] application to demonstrate the programming model for the various features provided by the framework.
+This is an link:https://causeway.apache.org[Apache Causeway] application to demonstrate the various features of the framework.
 
-On the left hand side of each web page you'll find the feature, and on the right hand side you'll find an explanation of the feature with code examples.
+On the left hand side of each page you'll find a working example of the feature, while on the right hand side you'll find a description of the feature with annotated code examples.
 
-=== Page Layout
+== Page Layout
 
 This is as good place as any to explain the page layout of an Apache Causeway webapp:
 
@@ -22,7 +22,7 @@ The `welcome` property - what you are reading now - is on the left, the `descrip
 +
 If running in prototype mode then there are a number of actions contributed by the framework (their label is in _italics_) so you can dig into the internal implementation.
 
-* At the bottom is a menu bar with credits, and to allow the user to *switch theme*.
+* At the bottom is a menu bar with credits, and to allow the user to *change theme*.
 
 Click into the application and try things out.
 
