--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/progmodel/autocomplete/ActionAutoCompletePage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/progmodel/autocomplete/ActionAutoCompletePage-description.adoc
@@ -14,7 +14,7 @@ There are several variations:
 * the parameter for which candidates are being supplied can be either a scalar or a collection
 * the supporting "autoComplete" method can be associated with the parameter by number, or by name
 * the list of candidates for a parameter can depend upon the value already selected for an earlier parameter.
-** The preceding N-1 parameters are supplied to the Nth "autoComplete" supporting method.
+** The preceding N-1 parameters are supplied to the N^th^ "autoComplete" supporting method.
 ** Or a single record-like structure can be defined and this can be passed through to all supporting methods instead.
 
 As noted above, a supporting method to return a list of candidate arguments is _always_ required for reference types.
