--- a/tooling/metaprog/src/main/resources/$Templates-description~primitive.adoc
+++ b/tooling/metaprog/src/main/resources/$Templates-description~primitive.adoc
@@ -2,30 +2,28 @@
 
 //#{generated-file-notice}
 
+
 The framework has built-in support for the (primitive) `#{showcase-type}` data type.
+These can be used either in entities or view models.
 
-From here you can:
+== How this demo works
 
-* navigate to an entity that uses the `#{showcase-type}` datatype
-* open a view model that uses the `#{showcase-type}` datatype
+On the left hand side is a collection of entities that uses the `#{showcase-type}` datatype.
+There is also an action that opens a view model; this view model also uses the `#{showcase-type}` datatype.
 
-Because `#{showcase-type}` is a primitive value, the properties on these domain objects are mandatory.
+Navigate into the entity or view model to see the datatype used as a property, an action parameter and as a return type of collections.
 
-== Common interfaces
+=== Implementation Notes
 
-The entity and view model types both implement some common interfaces.
+The entity and view model types both implement some common interfaces:
 
-=== #{showcase-name}Holder
-
-The `#{showcase-name}Holder` interface is used to contribute a number of mixins to both types:
-
+* The `#{showcase-name}Holder` interface is used to contribute a number of mixins to both types:
++
 [source,java]
 ----
-include::holder/$TemplateHolder~primitive.java[tags=class]
+include::holder/#{showcase-name}Holder.java[tags=class]
 ----
 
-=== #{showcase-name}Holder2
+* The `#{showcase-name}Holder2` interface is used to demonstrate support for label positions using `@PropertyLayout(labelPosition=...)`.
 
-The `#{showcase-name}Holder2` interface is used to demonstrate support for label positions using `@PropertyLayout(labelPosition=...)`.
 
-Further details, along with the effect of this annotation, can be seen on the entity and view model object pages.
