--- a/examples/demo/domain/src/main/java/demoapp/dom/types/javalang/bytes/WrapperBytes-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/types/javalang/bytes/WrapperBytes-description.adoc
@@ -10,7 +10,7 @@ These can be used either in entities or view models.
 On the left hand side is a collection of entities that uses the `java.lang.Byte` datatype.
 There is also an action that opens a view model; this view model also uses the `java.lang.Byte` datatype.
 
-Navigate into the entity or view model to see the datatype used as a property, an action parameter and as a return type of collections.
+Navigate into the entity or view model to see the datatype used as a property, an action parameter and as a return type of collections, along with code samples.
 
 === Implementation Notes
 
