--- a/tooling/metaprog/src/main/resources/$Templates-description.adoc
+++ b/tooling/metaprog/src/main/resources/$Templates-description.adoc
@@ -2,13 +2,13 @@
 
 //#{generated-file-notice}
 
-The framework has built-in support for the `#{showcase-type}` data type.
+The framework has built-in support for the `#{showcase-simple-type}` data type.
 These can be used either in entities or view models.
 
 == How this demo works
 
-On the left hand side is a collection of entities that uses the `#{showcase-type}` datatype.
-There is also an action that opens a view model; this view model also uses the `#{showcase-type}` datatype.
+On the left hand side is a collection of entities that uses the `#{showcase-simple-type}` datatype.
+There is also an action that opens a view model; this view model also uses the `#{showcase-simple-type}` datatype.
 
 Navigate into the entity or view model to see the datatype used as a property, an action parameter and as a return type of collections, along with code samples.
 
