--- a/examples/demo/domain/src/main/java/demoapp/dom/types/causeway/passwords/CausewayPasswords-common.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/types/causeway/passwords/CausewayPasswords-common.adoc
@@ -48,7 +48,7 @@ include::holder/CausewayPasswordHolder_mixinProperty.java[tags=class]
 
 == @PropertyLayout(labelPosition=...)
 
-There is also an extended interface, `CausewayPasswordHolder2`, with default methods demonstrating the use of label positions:
+To demonstrate support for label positions using `@PropertyLayout(labelPosition=...)`, the entity and view model objects both implement the extended `CausewayPasswordHolder2` interface:
 
 [source,java]
 ----
@@ -63,3 +63,4 @@ include::holder/CausewayPasswordHolder2.java[tags=class]
 +
 CAUTION: currently not supported
 <.> Hide the label completely.
+
