--- a/examples/demo/domain/src/main/java/demoapp/dom/types/causeway/localresourcepaths/CausewayLocalResourcePaths-common.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/types/causeway/localresourcepaths/CausewayLocalResourcePaths-common.adoc
@@ -2,7 +2,7 @@
 
 == Mixin actions
 
-A number of mixin actions contribute through the `CausewayLocalResourcePath` interface, demonstrate the use of `LocalResourcePath` as a parameter and as a return type.
+A number of mixin actions contribute through the `CausewayLocalResourcePathHolder` interface, demonstrate the use of `LocalResourcePath` as a parameter and as a return type.
 For example:
 
 * the `updateReadOnlyProperty` action is:
@@ -48,7 +48,7 @@ include::holder/CausewayLocalResourcePathHolder_mixinProperty.java[tags=class]
 
 == @PropertyLayout(labelPosition=...)
 
-There is also an extended interface, `CausewayLocalResourcePathHolder2`, with default methods demonstrating the use of label positions:
+To demonstrate support for label positions using `@PropertyLayout(labelPosition=...)`, the entity and view model objects both implement the extended `CausewayLocalResourcePathHolder2` interface:
 
 [source,java]
 ----
@@ -63,3 +63,4 @@ include::holder/CausewayLocalResourcePathHolder2.java[tags=class]
 +
 CAUTION: currently not supported
 <.> Hide the label completely.
+
