--- a/examples/demo/domain/src/main/java/demoapp/dom/types/causewayext/cal/CausewayCalendarEvents-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/types/causewayext/cal/CausewayCalendarEvents-description.adoc
@@ -1,31 +1,31 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-WARNING: TODO v2 - was copy pasted from UUID
+The framework has built-in support for modelling events on a calendar, using the `CalendarEvent` data type.
+This is a editable composite type which is rendered as a HTML card.
+It also integrates with the link:https://causeway.apache.org/vw/2.0.0-RC1/fullcalendar/about.html[FullCalendar] module; entities that implement the `CalendarEventable` interface (having a property of type `CalendarEvent`) will be rendered on a calendar.
 
-The framework has built-in support for the `CalendarEvent` data type.
+These can be used either in entities or view models.
 
-From here you can:
+NOTE: This is an Apache Causeway specific data type.
 
-* navigate to an entity that uses the `CalendarEvent` datatype
-* open a view model that uses the `CalendarEvent` datatype
+== How this demo works
 
-Some properties on these domain objects are mandatory, some optional.
+On the left hand side is a collection of entities that uses the `CalendarEvent` datatype.
+There is also an action that opens a view model; this view model also uses the `CalendarEvent` datatype.
 
-== Common interfaces
+Navigate into the entity or view model to see the datatype used as a property, an action parameter and as a return type of collections, along with code samples.
 
-The entity and view model types both implement some common interfaces.
+=== Implementation Notes
 
-=== CausewayCalendarEventHolder
+The entity and view model types both implement some common interfaces:
 
-The `CausewayCalendarEventHolder` interface is used to contribute a number of mixins to both types:
-
+* The `CausewayCalendarEventHolder` interface is used to contribute a number of mixins to both types:
++
 [source,java]
 ----
 include::holder/CausewayCalendarEventHolder.java[tags=class]
 ----
 
-=== CausewayCalendarEventHolder2
-
-The `CausewayCalendarEventHolder2` interface is used to demonstrate support for label positions using `@PropertyLayout(labelPosition=...)`.
+* The `CausewayCalendarEventHolder2` interface is used to demonstrate support for label positions using `@PropertyLayout(labelPosition=...)`.
 
 Further details, along with the effect of this annotation, can be seen on the entity and view model object pages.
