CAUSEWAY-2485: fleshes out WrapperFactory

--- a/examples/demo/domain/src/main/java/demoapp/dom/services/core/wrapperFactory/jdo/PrimeNumberJdo-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/services/core/wrapperFactory/jdo/PrimeNumberJdo-description.adoc
@@ -3,6 +3,7 @@
 CAUTION: TODO - to document
 
 [source,java]
+.PrimeNumberJdo.java
 ----
-include::WrapperFactoryJdo.java[tags=class]
+include::PrimeNumberJdo.java[tags=class]
 ----
