--- a/examples/demo/domain/src/main/java/demoapp/dom/services/core/wrapperFactory/jpa/PrimeNumberJpa-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/services/core/wrapperFactory/jpa/PrimeNumberJpa-description.adoc
@@ -3,7 +3,8 @@
 CAUTION: TODO - to document
 
 [source,java]
+.PrimeNumberJpa.java
 ----
-include::WrapperFactoryJpa.java[tags=class]
+include::PrimeNumberJpa.java[tags=class]
 ----
 
