CAUSEWAY-2485: resurrects the customui for demo app

--- a/examples/demo/domain/src/main/java/demoapp/dom/featured/customui/WhereInTheWorldPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/featured/customui/WhereInTheWorldPage-description.adoc
@@ -1,50 +1,60 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The link:https://causeway.apache.org/vw/{causeway-version}/about.html[Wicket viewer] renders the generic UI for entities and view models using a series of Wicket ``Component``s, with each such `Component` created by a `ComponentFactory`.
+The link:https://causeway.apache.org/vw/2.0.0-RC1/about.html[Wicket viewer] renders the generic UI for entities and view models using a series of Wicket ``Component``s, with each such `Component` created by a `ComponentFactory`.
 
 You can customise the UI by providing alternate implementations of `ComponentFactory`, for any component on the page, including the top-level component for the entire domain object.
 
-This custom UI uses the technique to provide a custom page for a `WhereInTheWorldVm` view model.
+== How this demo works
+
+This page is implemented as a custom page for the `WhereInTheWorldPage` view model.
+As you will have seen already, the `FeaturedMenu` domain service prompts for an address.
+This address is converted into a latitude and longitude, which is then displayed on a map.
 
 
-== Domain Objects
+=== Domain Objects
 
-The domain objects involved are the `WhereInTheWorldMenu` domain service and `WhereInTheWorldVm` view model.
+The domain objects (not involving custom UI code) consist of `FeaturedMenu`, which prompts for the address, the `WhereinTheWorldPage` view model, and the `GeoapifyClient` which converts the address into a latitude and longitude:
 
-The `WhereInTheWorldMenu` domain service prompts for an address, and uses the injected `GeoapifyClient` service to determine the latitude and longitude.
-A `zoom` level, which will be used when retrieving the map, is also prompted for:
-
+* the `FeaturedMenu` action is:
++
 [source,java,indent=0]
-.WhereInTheWorldMenu.java
+.FeaturedMenu.java
 ----
-include::../../FeaturedMenu.java[tags=whereInTheWorldAction]
+include::../FeaturedMenu.java[tags=whereInTheWorldAction]
 ----
+<.> uses a custom annotation with link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/Parameter.html#mustsatisfy[@Parameter#mustSatisfy] to enforce a range constraint.
 
-The `WhereInTheWorldVm` view model returned by the menu is defined normally.
-In this case, we have a JAXB view model with four properties:
-
+* The `WhereInTheWorldPage` view model returned by the menu is:
++
 [source,java]
-.WhereInTheWorldVm.java
+.WhereInTheWorldPage.java
 ----
-include::WhereInTheWorldVm.java[tags=class]
+include::WhereInTheWorldPage.java[tags=class]
+----
+<.> must be serializable
+
+* the `GeoapifyClient` domain service provides a geocode lookup of (lat, lng) for an address.
+It also provides a jpeg image for that location, at the specified zoom:
++
+[source,java]
+.GeoapifyClient.java
+----
+include::GeoapifyClient.java[tags=class]
 ----
 
-== Wicket components
+=== Wicket components
 
-To provide a custom component, we need to implement the `o.a.i.viewer.wicket.ui.ComponentFactory` interface, as a domain service.
-
-TIP: For more on this topic, see the link:https://causeway.apache.org/vw/{causeway-version}/extending.html#replacing-page-elements[Wicket viewer documentation].
-
+To provide a custom component, we need to provide a domain service implementing the link:https://causeway.apache.org/vw/2.0.0-RC1/extending/replacing-page-elements.html#how-to-replace-a-component[ComponentFactory] interface.
 There are various subclasses available; as we want to replace the component for the entire entity, we can subclass from `EntityComponentFactoryAbstract`:
 
 
 [source,java]
 .WhereInTheWorldPanelFactory.java
 ----
-include::../../../../webapp/wicket/ui/custom/WhereInTheWorldPanelFactory.java[tags=class]
+include::../../../webapp/wicket/common/featured/customui/WhereInTheWorldPanelFactory.java[tags=class]
 ----
 <.> the framework use the chain-of-responsibility pattern to look for a component factory to render the domain object.
-This `@javax.annotation.Priority` precedence ensures that this custom implementation is consulted early on.
+The `@javax.annotation.Priority` precedence ensures that this custom implementation is consulted early on.
 <.> indicates that this component applies when rendering a domain object (applies to view models as well as domain entities)
 <.> the superclass ensures that an `EntityModel` is provided to inspect.
 This is a Wicket model that is a serializable equivalent to the core framework's notion of a domain object.
@@ -64,7 +74,7 @@ The `WhereInTheWorldPanel` is the actual custom Wicket component, using the Wick
 [source,java]
 .WhereInTheWorldPanel.java
 ----
-include::../wicket/WhereInTheWorldPanel.java[tags=class]
+include::../../../webapp/wicket/common/featured/customui/WhereInTheWorldPanel.java[tags=class]
 ----
 <.> Wicket components are required to be serializable.
 <.> The `GeoapifyClient` as provided by the component factory, above.
@@ -75,7 +85,7 @@ Note that this must _also_ be serializable.
 [source,java,indent=0]
 .WhereInTheWorldPanel.java
 ----
-include::../../../../webapp/wicket/ui/custom/WhereInTheWorldPanel.java[tags=onInitialize]
+include::../../../webapp/wicket/common/featured/customui/WhereInTheWorldPanel.java[tags=onInitialize]
 ----
 <.> obtain the core framework's `ManagedObject` from the Wicket model...
 <.> \... and obtain the domain object in turn.
@@ -96,56 +106,23 @@ Wicket requires there to be corresponding HTML (`WhereInTheWorld.html`) file for
 [source,java,indent=0]
 .WhereInTheWorldPanel.java
 ----
-include::../../../../webapp/wicket/ui/custom/WhereInTheWorldPanel.java[tags=createMapComponent]
+include::../../../webapp/wicket/common/featured/customui/WhereInTheWorldPanel.java[tags=createMapComponent]
 ----
 <.> call the `GeoapifyClient` to download the JPEG...
 <.> \... and returns an `Image` component holding same
 
 * the `createPropertyComponent()` helper is:
-*
++
 [source,java,indent=0]
 .WhereInTheWorldPanel.java
 ----
-include::../../../../../webapp/wicket/common/ui/custom/WhereInTheWorldPanel.java[tags=createPropertyComponent]
+include::../../../webapp/wicket/common/featured/customui/WhereInTheWorldPanel.java[tags=createPropertyComponent]
 ----
 <.> obtains the `ObjectSpecification` (the framework's equivalent of `java.lang.Class`) for the domain object
 <.> obtains the `OneToOneAssociation` (the framework's equivalent of a `java.lang.reflect.Method`) for the specified property
-<.> creates a Wicket (serializable) model to represent this aspect of the framework's metamodel
 <.> uses the parent entity model to create a scalar model holding the actual value of the property of the domain object
 <.> uses the Wicket viewer's `ComponentFactoryRegistry` to create an appropriate component for this property value.
 
-This example therefore shows that the resultant page can be a mix of entirely custom Wicket components, and also reusing components provided by the Wicket viewer.
+This example therefore shows that the resultant page can be a mix of components provided out-of-the-box by the Wicket viewer supplemented by entirely custom Wicket components.
 
-== GeoapifyClient
 
-We have already seen the `GeoapifyClient` domain service; it provides a geocode lookup of (lat, lng) for an address, and provides a jpeg image for that location, at the specified zoom:
-
-[source,java]
-.GeoapifyClient.java
-----
-include::../geocoding/GeoapifyClient.java[tags=class]
-----
-
-== Classpath
-
-It's probably best practice for the custom Wicket component classes to be in the `webapp` module, rather than here in the domain module; we've placed them here just to have all the code together and to be easily locatable.
-
-It does however mean that we had to tweak the classpath to bring in a dependency on the Wicket viewer modules:
-
-[source,xml]
-.pom.xml
-----
-<dependencies>
-    <dependency>
-        <groupId>org.apache.causeway.viewer</groupId>
-        <artifactId>causeway-viewer-wicket-model</artifactId>
-        <optional>true</optional>	<!--1-->
-    </dependency>
-    <dependency>
-        <groupId>org.apache.causeway.viewer</groupId>
-        <artifactId>causeway-viewer-wicket-ui</artifactId>
-        <optional>true</optional>	<!--1-->
-    </dependency>
-</dependencies>
-----
-<.> to avoid polluting the classpath
