--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/entityChangePublishing/DomainObjectEntityChangePublishingPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/entityChangePublishing/DomainObjectEntityChangePublishingPage-description.adoc
@@ -21,21 +21,53 @@ causeway:
         entity-change-publishing: 'none'    # 'none' | 'all'
 ----
 
-This demo app has entity change publishing disabled by default.
-
-Entity change publishing can also be enabled on a case by case basis using the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/DomainObject.html#entitychangepublishing[@DomainObject#entitychangepublishing] attribute.
+This demo app has entity change publishing disabled by default, but can be re-enabled on a case by case basis using the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/DomainObject.html#entitychangepublishing[@DomainObject#entitychangepublishing] attribute.
+This page references a domain object that uses this attribute.
 
 
 
 == How this demo works
 
 The collection on the left shows a set of entity instances, which have `@DomainObject#entityChangePublishing` to enable the publishing of any changes to their state.
-
-Using this view model, you can use the actions to create new instances of the entity, update them or to delete them.
-
-Meanwhile, at the bottom of this page is a collection that simply lists all of the changes that have been received.
+Below it is a collection that simply lists all of the changes that have been received.
 This uses an implementation of `EntityChangesSubscriber` that captures changes and simply holds them in-memory.
+(There will always be some listed from the fixture scripts run when the application first bootstraps.)
 
-NOTE: there will always be some listed from the fixture scripts run when the application first bootstraps.)
+Using the "modify" action, you can (in one go) create new instances of the entity class, update existing instances, or delete instances.
+This will cause new events to be logged.
 
-Navigate into each of the domain entities to see the code examples.
+
+In terms of code:
+
+* the entity class re-enables change publishing using `DomainObject#entityChangePublishing`:
++
+[source,java]
+----
+include::jpa/DomainObjectEntityChangePublishingEntityImpl.java[tags=class]
+----
+
+* the modify action:
++
+[source,java,indent=0]
+----
+include::DomainObjectEntityChangePublishingPage_modify.java[tags=act]
+----
+
+* the subscriber:
++
+[source,java,indent=0]
+.EntityChangesSubscriberToCaptureChangesInMemory.java
+----
+include::../../../_changes/EntityChangesSubscriberToCaptureChangesInMemory.java[tags=class]
+----
+<.> describes the set of changes
+
+* NB: this page shows the list of recent changes by virtue of also implementing a `ExposeCapturedChanges` marker interface (part of the demo app, not the framework).
+A mixin then contributes the "recentChanges" collection:
++
+[source,java,indent=0]
+.ExposeCapturedChanges_recentChanges.java
+----
+include::../../../_changes/ExposeCapturedChanges_recentChanges.java[tags=class]
+----
+
